# ClinMindRuntime

./: .gitignore  README.md  pom.xml  pyproject.toml  企业级智能诊断训练—运行—经验进化平台设计.md
app/: main.py
app/api/: runtime_api.py  schemas.py
app/case/: __init__.py  case_frame.py
app/entry/: __init__.py  entry_assessment.py
app/runtime/: runtime_service.py
app/state/: __init__.py  runtime_state.py  (+2 more)
console-web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: 00_项目设计地图.md  AI_IMPLEMENTATION_SKILL.md  AIdoctor可复用设计资产整理.md  AI前沿技术选型与接入规划.md  API测试.md  ClinMindRuntime完整系统设计.md  ClinMindRuntime技术实现总方案.md  ClinMindRuntime阶段拆分路线图.md  Phase1_API与测试设计.md  Phase1_Runtime_MVP_实现规格.md  Phase1_开发任务清单.md  Phase1_技术栈与工程架构决策.md  Phase1_数据结构与状态设计.md  Phase1_模块接口设计.md  Phase2_API与测试设计.md  Phase2_人工测试API结果.md  Phase2_共享能力资产原型_实现规格.md  Phase2_开发任务清单.md  Phase2_资产数据结构与版本设计.md  Phase3_API与测试设计.md  Phase3_CapabilityProfile更新机制设计.md  Phase3_P0冻结记录.md  Phase3_Runtime评估接入设计.md  Phase3_人工测试API结果.md  Phase3_开发任务清单.md  Phase4_P0冻结记录.md  Phase4_P1人工测试API结果.md  Phase4_P1候选Review记录设计.md  Phase4_P1候选脱敏与来源校验设计.md  Phase4_P1开发任务清单.md  Phase4_Runtime与Evaluation接入设计.md  Phase4_人工测试API结果.md  Phase4_开发任务清单.md  Phase4_数据结构设计.md  Phase4_经验候选与训练数据候选沉淀_实现规格.md  Phase5_API与测试设计.md  Phase5_P0Repository迁移设计.md  Phase5_P0人工测试API结果.md  Phase5_P0冻结记录.md  Phase5_P0审计与权限边界设计.md  (+28 more)
python-provider/: requirements.txt
tests/: test_case_frame.py  test_entry_assessment.py  test_imports.py  test_runtime_api.py  test_runtime_state.py  test_runtime_status.py  test_runtime_store.py  test_runtime_trace.py
(+1067 files in other folders)
